# QKD_PP

./: LDPC_decoding.py  LPDC_HW_model.py  RREF_parallel.cpp  cascade_EC.py  cascade_decoding.py  exp_setup.json  experiements.py  gaussian.py  linalgtools.cpp  linalgtools.py  noise_modelling.py  noisy_decoding.py  plot_simulated_attack.py  power_decoding.py  prob_plot.py  solver_timing.py  test_cpp_solver.py
cascade/: block.py  key.py  mock_classical_channel.py  reconciliation.py  run_EC.py  shuffle.py
cpp_python_interop/: CMakeLists.txt  python_runner.py  pywrap.cpp
tools/linalg/: CMakeLists.txt  linalgtools.cpp
